# ai-work-assistant

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml  terraform.tfstate
.circleci/: config.yml
docs/: circleci-setup.md  index.md  testing.md
docs/api/: ai_client_api.md  ai_client_api_models.md  claude_client_impl.md  claude_model_impl.md  discord_listener.md  gmail_client_impl.md  gmail_message_impl.md  mail_client_api.md  message.md  orchestrator.md
src/ai_client_api/: README.md  pyproject.toml
src/ai_client_api/src/ai_client_api/: __init__.py  client.py  models.py
src/ai_client_api/tests/: test_ai_client_api.py
src/claude_client_impl/: README.md  pyproject.toml
src/claude_client_impl/src/claude_client_impl/: __init__.py  claude_impl.py  models_impl.py
src/claude_client_impl/tests/: test_claude_client_impl.py
src/discord_listener/: README.md  pyproject.toml
src/discord_listener/src/discord_listener/: __init__.py  main.py
src/discord_listener/tests/: test_main.py
src/gmail_client_impl/: README.md
src/gmail_client_impl/src/gmail_client_impl/: __init__.py  gmail_impl.py
src/gmail_client_impl/tests/: test_authentication.py  test_core_methods.py  test_gmail_impl_helpers.py
src/mail_client_api/: README.md
src/mail_client_api/src/mail_client_api/: __init__.py  client.py  message.py
src/mail_client_api/tests/: test_mail_client_api.py
src/orchestrator/: README.md  pyproject.toml  system.txt
src/orchestrator/src/orchestrator/: google_auth_routes.py  main.py  models.py
src/orchestrator/src/orchestrator/tools/: __init__.py  auth.py  mail.py  registry.py
src/orchestrator/tests/: test_auth_tools.py  test_google_auth_routes.py  test_mail_tools.py  test_main_app.py  test_tool_registry.py
terraform/: .terraform.lock.hcl  README.md  main.tf  terraform.tfvars.example  variables.tf
tests/e2e/: test_orchestrator_e2e.py
tests/integration/: test_ai_client_integration.py  test_discord_listener_integration.py  test_mail_client_integration.py  test_orchestrator_integration.py
