[project]
name = "claude-client-impl"
version = "0.1.0"
description = "Concrete implementation of the Claude chat service contract."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.72.0",
    "ai-client-api",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[tool.uv.sources]
ai-client-api = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
